Review Request 15304 - PLS-9158 stats only display for Intent and Tech Profile - fixed text overflow issue in long labels

--- a/le-ui/projects/common/assets/sass/_tooltips.scss
+++ b/le-ui/projects/common/assets/sass/_tooltips.scss
@@ -344,6 +344,7 @@ tooltip {
             padding: 20px;
             padding-right: 10px;
             overflow: hidden;
+            white-space: normal;
         }
         &:before {
             box-shadow: inherit;
