--- a/le-ui/projects/common/components/datacloud/attributes/list/list.component.scss
+++ b/le-ui/projects/common/components/datacloud/attributes/list/list.component.scss
@@ -151,6 +151,7 @@ ul.attr-list-results {
             label {
                 display: inline;
                 padding-left: 1em;
+                white-space: nowrap;
             }
 
             i.fa-info-circle,
